hopefully fixed menu and horizontal scroll issue on Loki pages

--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -2209,6 +2209,7 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
+    overflow-y: auto !important;
 		position: absolute;
 		display: block;
 		top: 2.5em;
